# oem-monorepo

./: .bazelrc  .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  bms-motherboard.kicad_pcb  bms-motherboard.kicad_prl  bms-motherboard.kicad_pro  bms-motherboard.kicad_sch  data_aquisition_module.kicad_pro  requirements.txt  requirements_lock.txt
.github/workflows/: main.yml
common/: BUILD  debug.sh  flash.sh  macros.bzl  startup.c  stm32g441.ld
common/can_api/: c_generator.py  dbc_generator.py
parts/3d models/: C_1000uF_25V_Radial - UPS1E102MHD.stp  C_100uF_100V_Radial - 100ZLH100MEFC12.5X16.step  C_100uF_50V_Radial - ESK107M050AG3EA.stp  C_10uF_450V_Radial - 450BXC10MEFC10X20.stp  D_Schottky_100V_1A_SOD123W - SS110LW.stp  J_Ampseal_14_RA - 1-776266-1.step  J_Ampseal_14_VT - AmpSeal-14.step  J_Ampseal_23_RA - 776087-1.step  J_Ampseal_23_VT.step  J_Ampseal_8_RA - 1-776279-1.step  J_Ampseal_8_VT - 1-776276-1.step  J_Programming_Pin_Header_Keyed.step  K_SPST-NO_10A_12V_TH - G5Q-1A4-DC12.stp  K_SPST-NO_10A_5V_TH - G5Q-1A4-DC5.stp  L_15uH_3.2A_45.5m_SMD - NR10050T150M.stp  L_2.2uH_3A_46m_SMD - IHLP1212BZER2R2M11.stp  L_2.2uH_8.2A_19m_SMD - SPM6530T-2R2M.stp  L_3.3uH_5A_21m_SMD - SRN6045TA-3R3Y.stp  L_3.9uH_2A_55m_SMD - IND_BOURNS_SRR5018.step  L_BMS-isoSPI-Transformer_SM91501AL-E_SMD - SM91501ALE.stp  R_Pot_50k_0.05W - PTV112-4420A-A503.stp  SW_SPST_0.05A_12V_SMD - B3U-1000P.stp  SW_SPST_0.05A_12V_SMD - PTS645SM43SMTR92_LFS.stp  U_1.222V-Buck-Conv_RT6285GSP_ SOP-8.stp  U_5V-DC-DC_PQME1-S5-S5-M-TR_SMD.stp  U_Current-Sensor_ACS37010LLZATR-030B5_SOIC-6.stp  U_NAND-Gate_BU4S11G2-TR_5SSOP - BU4S11G2-TR.stp  U_Quad-NAND-RS-Latch_CD4044BDR_16-SOIC - CD4044BDR.stp  U_SPI-IO-Xpndr_MCP23S17-E_SO_SOIC-28.stp  X_12MHz_20pF_SMD - ECS-120-20-33-CKM-TR.stp  X_16MHz_18pF_SMD - FA-238_16.0000MB-C0.stp  X_8MHz_12pF_SMD - ECS-80-12-33-JGN-TR.stp
parts/oem.pretty/: B3U-1000P (SW_SPST_0.05A_12V_SMD - B3U-1000P).kicad_mod  CAPPRD350W60D800H1250 (C_100uF_50V_Radial - ESK107M050AG3EA).kicad_mod  CAPPRD500W60D1025H2200 (C_10uF_450V_Radial - 450BXC10MEFC10X20).kicad_mod  CAPPRD500W60D1275H2200 (C_1000uF_25V_Radial - UPS1E102MHD).kicad_mod  C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  (+50 more)
(+311 files in other folders)
